fix background overlay on mobile menu

--- a/styles.css
+++ b/styles.css
@@ -171,12 +171,20 @@ body {
 }
 
 .hide {
-  filter: blur(2px);
-  overflow-y: hidden;
+  visibility: hidden;
+  opacity: 0;
+}
 
-  /* background: #00001a;
-  mix-blend-mode: normal;
-  opacity: 0.5; */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  z-index: 100;
+  transition: all 0.5s;
 }
 
 .header {
